--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -8,7 +8,7 @@ body {
 .App {
   max-width: 1400px;
   width: 100vw;
-  height: 100vw;
+  height: 100vh;
   margin: 0 auto;
   padding: 20px;
   font-family: "Merriweather", serif;
