--- a/src/styles/Logoin.scss
+++ b/src/styles/Logoin.scss
@@ -1,6 +1,6 @@
 form {
   width: 400px;
-  margin: 10% auto;
+  margin: 5% auto;
   display: flex;
   flex-direction: column;
   border: 2px solid #000;
@@ -18,6 +18,9 @@ form {
     margin: 0 auto;
     color: #2edfb8;
     background: #fff;
+    animation-name: rotateLogo;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
   }
   label {
     padding: 0.2em;
@@ -41,5 +44,14 @@ form {
   .form-btn {
     margin-top: 0.5em;
     text-align: end;
+  }
+}
+
+@keyframes rotateLogo {
+  from {
+    transform: rotateY(0deg);
+  }
+  to {
+    transform: rotateY(360deg);
   }
 }
