--- a/src/styles/shopProduct.scss
+++ b/src/styles/shopProduct.scss
@@ -1,42 +1,38 @@
 .product {
-  padding: 1em;
   border: 2px solid rgb(177, 220, 221);
   box-shadow: 5px 5px 5px rgba(177, 220, 221, 0.5);
-  border-radius: 20px;
+  border-radius: 0.5em;
+  overflow: hidden;
   margin-right: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
   button {
-    font-size: 1.3em;
+    font-size: 1.2em;
     padding: 0.2em;
     border-radius: 0.3em;
   }
   .product-content,
-  .product-img,
   img,
   .product-btn {
     width: 100%;
   }
-
-  img {
-    border-radius: 0.5em;
+  .product-content {
+    margin-top: 0.5em;
+    padding: 0 0.5em;
   }
-
   .product-title {
-    text-align: center;
-    margin-bottom: 0.2em;
+    display: flex;
+    justify-content: space-around;
   }
-
   .product-price {
-    margin: 0.2em 0;
-    font-size: 1.1em;
+    margin-top: 0.5em;
     display: flex;
     justify-content: space-between;
   }
 
   .product-btn {
-    margin-top: auto;
+    padding: 0.5em;
     display: flex;
     justify-content: space-between;
     button {
