--- a/src/styles/shopcart.scss
+++ b/src/styles/shopcart.scss
@@ -21,8 +21,10 @@
 .shopcart {
   margin-top: 10px;
   width: 100%;
+  height: 80vh;
   text-align: end;
   .shopcart-itemlist {
+    height: 100%;
     margin-top: 0.5em;
     padding: 5px;
     width: 100%;
@@ -53,6 +55,7 @@
   }
   .shopcart-item {
     display: flex;
+
     justify-content: flex-end;
     margin: 10px 0;
     p {
@@ -62,6 +65,7 @@
       align-items: center;
     }
     button {
+      margin-top: auto;
       @include btn-danger();
     }
   }
