--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,5 +1,5 @@
 .home {
-  background-image: url("../img/people-walking-on-street-near-buildings-2339009.jpg");
+  background-image: url("../img/sliced-sushi-on-tray-1028429\ \(1\).jpg");
   background-size: cover;
   background-position: center;
   opacity: 0.8;
