--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,6 +1,8 @@
 .home {
   background-image: url("../img/sliced-sushi-on-tray-1028429\ \(1\).jpg");
-  background-size: cover;
+  background-size: contain;
+  background-color: rgb(29, 28, 28);
+  background-repeat: no-repeat;
   background-position: center;
   opacity: 0.8;
 }
