--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,6 +1,7 @@
 .about {
   background-image: url("../img/close-up-photo-of-sushi-served-on-table-248444.jpg");
-  background-size: cover;
+  background-size: contain;
+  background-color: rgb(252, 222, 203);
+  background-repeat: no-repeat;
   background-position: center;
-  opacity: 0.8;
 }
